# fastapi-async-poc

./: pyproject.toml
app/: __main__.py  background.py  container.py  main.py  task.py
tests/: test_async_api.py
